# HPP-for-OpenThread

./: .gitignore  CMakeLists.txt  DoMake.cmd  Kconfig  LICENSE  README.md  README.txt  hppConfig.h  main.c  prj.conf  zephyr_shell.cmd
examples/posix/: hppConfig.h  hpp_posix.c
examples/thread_no_script/: hppConfig.h  main.c
include/: hppNRF52840.h  hppParser.h  hppThread.h  hppVarStorage.h  hppZephyr.h
scripts/: zbuild.cmd  zflash.cmd  zsetenv.cmd  ztarget.cmd
scripts/output/: README.txt
src/: hppNRF52840.c  hppParser.c  hppThread.c  hppVarStorage.c  hppZephyr.c  main.c
tools/firmware/: nrf52840_xxaa.hex
